change hero-section width

--- a/my-wireframe/css/index.css
+++ b/my-wireframe/css/index.css
@@ -12,12 +12,17 @@ a{
 }
 
 .hero-section{
-    width: 300px;
+    width: 800px;
     max-width: 620px;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
     border: solid 4px black;
+    padding: 10px;
+}
+
+.hero-section p{
+    text-align: left;
 }
 
 .first-article{
