--- a/my-wireframe/css/index.css
+++ b/my-wireframe/css/index.css
@@ -3,6 +3,13 @@
 }
 
 
+body{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin: 0;
+  padding: 0;
+}
+
 
 a{
     padding: 10px;
@@ -27,9 +34,9 @@ header{
 
 .articles{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content:center;
     padding: 20px;
+    gap: 40px;
 }
 
 .articles > article:first-child{
@@ -47,7 +54,7 @@ img{
 }
 
 article{
-    width: 300px;
+    width: 400px;
     border: solid 4px black;
     padding: 20px;
 }
@@ -55,5 +62,9 @@ article{
 footer{
     text-align: center;
     margin-top: 30px;
+}
+
+@media (max-width: 678px){
+    
 }
 
