makes site responsive using media

--- a/my-wireframe/css/index.css
+++ b/my-wireframe/css/index.css
@@ -65,6 +65,17 @@ footer{
 }
 
 @media (max-width: 678px){
-    
+    .articles{
+        display: block;
+    }
+
+    article{
+        width: 100%;
+        border: none;
+    }
+
+    header{
+        width: 100%;
+    }
 }
 
