increases font size of input fields

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -4,11 +4,12 @@ body{
       padding: 0;
     }
 
-    
+
 input{
 padding: 5px;
 outline: none;
 border-radius: 5px;
+font-size: 14px;
 }
 
 input:focus{
