--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -16,3 +16,13 @@ input:focus{
     border-color: green;
     box-shadow: 0 0 8px rgba(76, 175, 80, 0.6);
 }
+
+select {
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    font-size: 16px;
+    color: #333;
+    width: 150px;
+  }
