--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -9,27 +9,41 @@ body {
 }
 
 .hero {
-    width: 40%;
+    width: 50%;
     margin: 0 auto;
 }
 
+.item {
+    margin: 1em;
+}
+
+@media (min-width:650px){
+    .hero-1 {
+        display: flex;
+        justify-content: space-around;
+        align-items: baseline;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
 h2, h3 {
     text-align: left;
 }
 
 .container {
+    width: 100%;
     text-align: center;
 }
 
 img {
-    width: 100%;
+    width: 90%;
 }
 
 .cont-art {
     width: 100%;
     padding: 10px;
     box-shadow: 0 1px 3px 2px black;
-    min-width: 250px;
+    min-width: 290px;
     margin: 0 -3.9em;
     margin-top: 1em;
     background-color: cornsilk;
@@ -49,6 +63,10 @@ img {
     font-size: 15px;
     text-transform: uppercase;
     text-decoration: none;
+}
+
+.btn-2, .btn-3 {
+    margin: .7em .200em;
 }
 
 .btn:hover {
