--- a/style.css
+++ b/style.css
@@ -79,14 +79,14 @@ main {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 15px;
-    background-color: #444;
+    background-color: #4a90e2;
     color: #fff;
     text-decoration: none;
     border-radius: 4px;
 }
 
 .articles a:hover {
-    background-color: #666;
+    background-color: #357abf;
 }
 
 footer {
