--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -15,7 +15,7 @@ Bold: 700
 Default: 1
 Small: 1.05
 Medium: 1.2
-Paragraph default: 1.6
+Paragraph default: 1.5
 
 - Letter spacing
 -0.5px
@@ -43,7 +43,7 @@ Paragraph default: 1.6
 
 --- 06 BORDER-RADIUS
 
-Default: 9px
+Default: 10px
 Medium: 11px
 
 --- 07 WHITESPACE
@@ -53,7 +53,7 @@ Medium: 11px
 */
 
 
-/* GENERAL */
+/* GENERAL AND HELPERS*/
 
 * {
     padding: 0;
@@ -78,24 +78,67 @@ body {
     margin: 0 auto;
 }
 
-/* HEADER */
+.center {
+    text-align: center;
+}
 
-.header {
-    background-color: #d2d4d8;
-    padding: 2.4rem 0;
+
+.heading-primary, .heading-secondary {
+    font-weight: 600;
+    color: #333;
+    letter-spacing: -0.5px;
 }
 
 .heading-primary {
     font-size: 7.4rem;
-    color: #333;
-    letter-spacing: -0.5px;
-    text-align: center;
+    margin-bottom: 3.2rem;
 }
+
+.heading-secondary {
+    font-size: 4.4rem;
+    margin-bottom: 2.4rem;
+}
+
+/* HEADER */
+
+.header {
+    background-color: #e9eaeb;
+    padding: 2.4rem 0 3.2rem 0;
+}
+
 
 .header-text {
     font-size: 2.4rem;
-    text-align: center;
-    padding: 2.4rem 0 0 0;
 }
 
-/* WHAT-GIT */
+/* ARTICLE */
+
+.article {
+    padding: 6.4rem;
+    /* background-color: #e9eaeb; */
+}
+
+.article-summary {
+    font-size: 2.0rem;
+    line-height: 1.5;
+    margin-bottom: 1.6rem;
+}
+
+.article-link:link, .article-link:visited {
+    display: inline-block;
+
+    font-size: 2.0rem;
+    text-decoration: none;
+    font-weight: 600;
+    background-color: #1e293b;
+    color: #a5a9b1;
+
+    padding: 1.6rem 2.4rem;
+    border-radius: 10px;
+    transition: all 0.3s;
+}
+
+.article-link:hover, .article-link:active {
+    background-color: #18212f;
+}
+
