--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -81,6 +81,7 @@ body {
     margin: 0 auto;
 }
 
+
 .center {
     text-align: center;
 }
@@ -102,13 +103,34 @@ body {
     margin-bottom: 2.4rem;
 }
 
+.grid {
+    display: grid;
+}
+
+.grid--article {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.grid--1-col {
+    grid-template-columns: 1fr;
+}
+
+.grid--2-cols {
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid--3-row {
+    gap: 3.2rem;    
+    height: 100%;
+}
+
 /* HEADER */
 
 .header {
-    /* background-color: #e9eaeb; */
-    background-color: #a5a9b1;
-    
-    padding: 2.4rem 0 3.2rem 0;
+    background-color: #a5a9b1;    
+    padding: 2.4rem 0 4.8rem 0;
+
 }
 
 
@@ -118,9 +140,38 @@ body {
 
 /* ARTICLE */
 
-.article {
-    padding: 6.4rem;
+article:first-child { 
+    width: 75%;
+    margin: 0 auto;
+    box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.1);
+}
+
+.section-article {
     background-color: #e9eaeb;
+    padding: 4.8rem 0;
+}
+
+.article {
+    padding: 6.4rem 4.8rem;
+    border-radius: 14px;
+}
+
+.article-what-git {
+    grid-column: 1 / 5;
+}
+
+.article-why-git {
+    grid-column: 1 / 3;
+}
+
+.article-what-branch {
+    grid-column: 3 / 5;
+}
+
+
+.article-img {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .article-summary {
@@ -128,6 +179,11 @@ body {
     line-height: 1.6;
     margin-bottom: 1.6rem;
 }
+
+.link-container {
+    align-self: end;
+}
+
 
 .article-link:link, .article-link:visited {
     display: inline-block;
