--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -137,12 +137,13 @@ body {
 
 .section-article {
     background-color: #e9eaeb;
-    padding: 4.8rem 0;
+    padding: 6.4rem 0;
 }
 
 .article {
     padding: 6.4rem 4.8rem;
     border-radius: 16px;
+
 }
 
 article:first-child { 
@@ -155,6 +156,11 @@ article:first-child {
     grid-column: 1 / 5;
 }
 
+.article-what-git .article-img {
+    width: 75%;
+    margin: 0 auto;
+}
+
 .article-why-git {
     grid-column: 1 / 3;
 }
@@ -165,8 +171,8 @@ article:first-child {
 
 
 .article-img {
-    width: 80%;
-    margin: 0 auto;
+    width: 100%;
+
 }
 
 .article-summary {
@@ -203,6 +209,10 @@ article:first-child {
 .footer {
     padding: 2.4rem;
     background-color: #353e4f;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-text {
