--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -48,175 +48,167 @@ Medium: 16px
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
 
-
 /* GENERAL AND HELPERS*/
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    font-family: 'roboto', sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
+  font-family: "roboto", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
 }
 
 .container {
-    max-width: 120rem;
-    padding: 0 3.2rem;
-    margin: 0 auto;
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
 }
-
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
-
-.heading-primary, 
+.heading-primary,
 .heading-secondary {
-    font-weight: 600;
-    color: #333;
-    letter-spacing: -0.5px;
+  font-weight: 600;
+  color: #333;
+  letter-spacing: -0.5px;
 }
 
 .heading-primary {
-    font-size: 7.4rem;
-    margin-bottom: 3.2rem;
+  font-size: 7.4rem;
+  margin-bottom: 3.2rem;
 }
 
 .heading-secondary {
-    font-size: 4.4rem;
-    margin-bottom: 2.4rem;
+  font-size: 4.4rem;
+  margin-bottom: 2.4rem;
 }
 
 .grid {
-    display: grid;
+  display: grid;
 }
 
 .grid--article {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
 
 .grid--1-col {
-    grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
 }
 
 .grid--2-cols {
-    grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .grid--3-row {
-    gap: 3.2rem;    
-    height: 100%;
+  gap: 3.2rem;
+  height: 100%;
 }
 
 /* HEADER */
 
 .header {
-    background-color: #a5a9b1;    
-    padding: 2.4rem 0 4.8rem 0;
-
+  background-color: #a5a9b1;
+  padding: 2.4rem 0 4.8rem 0;
 }
 
-
 .header-text {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 
 /* ARTICLE */
 
-
 .section-article {
-    background-color: #e9eaeb;
-    padding: 6.4rem 0;
+  background-color: #e9eaeb;
+  padding: 6.4rem 0;
 }
 
 .article {
-    padding: 6.4rem 4.8rem;
-    border-radius: 16px;
-
+  padding: 6.4rem 4.8rem;
+  border-radius: 16px;
 }
 
-article:first-child { 
-    width: 75%;
-    margin: 0 auto;
-    box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.1);
+article:first-child {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.1);
 }
 
 .article-what-git {
-    grid-column: 1 / 5;
+  grid-column: 1 / 5;
 }
 
 .article-what-git .article-img {
-    width: 75%;
-    margin: 0 auto;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .article-why-git {
-    grid-column: 1 / 3;
+  grid-column: 1 / 3;
 }
 
 .article-what-branch {
-    grid-column: 3 / 5;
+  grid-column: 3 / 5;
 }
 
-
 .article-img {
-    width: 100%;
-
+  width: 100%;
 }
 
 .article-summary {
-    font-size: 2.0rem;
-    line-height: 1.6;
-    margin-bottom: 1.6rem;
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 1.6rem;
 }
 
 .link-container {
-    align-self: end;
+  align-self: end;
 }
 
+.article-link:link,
+.article-link:visited {
+  display: inline-block;
 
-.article-link:link, .article-link:visited {
-    display: inline-block;
+  font-size: 2rem;
+  text-decoration: none;
+  font-weight: 600;
+  background-color: #1e293b;
+  color: #e9eaeb;
 
-    font-size: 2.0rem;
-    text-decoration: none;
-    font-weight: 600;
-    background-color: #1e293b;
-    color: #e9eaeb;
-
-    padding: 1.6rem 2.4rem;
-    border-radius: 10px;
-    transition: all 0.3s;
+  padding: 1.6rem 2.4rem;
+  border-radius: 10px;
+  transition: all 0.3s;
 }
 
-.article-link:hover, .article-link:active {
-    background-color: #151d29;
+.article-link:hover,
+.article-link:active {
+  background-color: #151d29;
 }
 
 /* FOOTER */
 
 .footer {
-    padding: 2.4rem;
-    background-color: #353e4f;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+  padding: 2.4rem;
+  background-color: #353e4f;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-text {
-    font-size: 2.0rem;
-    line-height: 1.5;
-    color: #e9eaeb;
+  font-size: 2rem;
+  line-height: 1.5;
+  color: #e9eaeb;
 }
