--- a/Cakes-Co/style.css
+++ b/Cakes-Co/style.css
@@ -84,9 +84,11 @@ nav {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content:space-between;
+  margin: 10px auto;
+
 }
 
 main {
