--- a/my-wireframe/css/index.css
+++ b/my-wireframe/css/index.css
@@ -18,9 +18,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left: auto;
 }
 
-.top_first_article{
-    height: 300px;
-}
 
 a{
     padding: 10px;
@@ -41,10 +38,10 @@ a:hover, a:focus{
 
 
 header{
-    width: 800px;
-    max-width: 620px;
+    width: 840px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 20px;
     padding: 10px;
 }
 
@@ -86,6 +83,11 @@ footer{
     }
 
     header{
+        width: 100%;
+    }
+
+    .first_article{
+        display: block;
         width: 100%;
     }
 }
