--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -17,6 +17,7 @@ header {
 }
 
 h1 {
+    margin-top: 50px;
     font-weight: 900;
 }
 
@@ -58,7 +59,6 @@ section.two {
     justify-content: space-between;
     width: 70%;
     margin: 20px auto;
-    /* border: 2px solid black; */
     padding: 20px;
 }
 
@@ -66,17 +66,11 @@ section.two {
 section.two article {
     padding: 20px;
     margin: 0 10px;
-    /* border: 2px solid black; */
 }
 
+/* LINK */
 
-/* READ MORE/LESS BUTTON */
-
-.toggle {
-    display: none;
-}
-
-.toggle-label {
+a {
     display: inline-block;
     margin-top: 10px;
     cursor: pointer;
@@ -87,24 +81,12 @@ section.two article {
     border-radius: 5px;
 }
 
-.extra-content {
-    display: none; 
-}
-
-.toggle:checked + .toggle-label {
-    content: "Read less"; 
-}
-
-.toggle:checked ~ .extra-content {
-    display: block;
-}
-
 /* FOOTER */
 footer {
     text-align: center;
     padding: 20px;
     width: 100%;
-    background-color: #333;
+    background-color: #232323;
     color: white;
     margin-top: 20px;
 }
