--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -83,10 +83,15 @@ a {
 
 /* FOOTER */
 footer {
+    position: fixed;
+    bottom: 0;
     text-align: center;
-    padding: 20px;
+    padding: 10px 20px;
     width: 100%;
-    background-color: #232323;
+    background-color: rgba(35, 35, 35, 0.7);
     color: white;
-    margin-top: 20px;
+}
+
+footer p {
+    font-size: small;
 }
