--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -28,6 +28,7 @@
         url("../fonts/lato-v15-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   html {
+    height: 100%;
     scroll-behavior: smooth;
     box-sizing: border-box;
   }
@@ -38,6 +39,7 @@
   }
   
   body {
+    height: 100%;
     font-family: lato;
     font-style: normal;
     font-size: 16px;
@@ -53,4 +55,78 @@
 
   .wrapper_title {
     text-align: center;
+  }
+
+  .wrapper-article {
+    max-width: 1060px;
+    margin: 0 auto;
+    display: flex;
+    
+    flex-direction: column;
+  }
+
+  .main_article {
+    
+    padding: 20px;
+    /* width: 900px;
+    height: 400px; */
+  }
+
+  img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 15px;
+  }
+
+  .articles {
+    margin: 20px 0;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .article {
+    padding: 20px;
+  }
+
+  .article_btn {
+   
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px; 
+  
+    margin-right: 38px;
+  
+    width: 161px;
+    height: 50px;
+  
+    color: #e06733;
+  
+    box-sizing: border-box;
+  
+    border: 1px solid #e06733;
+    border-radius: 5px;
+  
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: #edf2ec;
+    transition: all 0.3s ease-in;
+  }
+
+  .article_btn:hover {
+    background-color: #4caf50;
+    color: white;
+  }
+
+  .page {
+    overflow: hidden;
+  }
+
+  .footer {
+   
+    width: 100%;
+    height: 100px;
+    background-color: black;
   }
