--- a/style.css
+++ b/style.css
@@ -63,8 +63,8 @@ main {
 }
 
 .articles img {
-    width: 100%;
-    height: auto;
+    width: 600;
+    height: 400;
     border-radius: 5px;
     margin-bottom: 15px;
 }
