--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -37,16 +37,39 @@ main {
     margin-bottom: 2rem;
     border: 1px solid var(--sa-blue);
     padding: 1rem;
+    align-items: flex-start; /* Align items to the top */
 }
 
 .featured-article img {
-    width: 50%;
+    width: 40%; /* Reduced from 50% to give more space to content */
+    max-height: 300px;
     object-fit: cover;
+    object-position: center;
 }
 
 .featured-article .article-content {
     padding-left: 1rem;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.featured-article h2 {
+    margin-top: 0; /* Remove top margin to align with image */
+}
+
+.featured-article p {
+    flex-grow: 1; /* Allow paragraph to grow and push button to bottom */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 6; /* Limit to 6 lines */
+    -webkit-box-orient: vertical;
+}
+
+.featured-article .read-more {
+    align-self: flex-start; /* Align button to the left */
+    margin-top: 1rem; /* Add some space above the button */
 }
 
 .secondary-articles {
