--- a/Wireframe/css/styles.css
+++ b/Wireframe/css/styles.css
@@ -1,7 +1,77 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    margin: 0;
 }
 
-.header {
+.header-container {
     align-items: center;
+    border: 3px;
+    border-color: black;
+    border-style: dashed;
+    text-align: center;
+    padding-top: 8%;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 3%;
+    height: 200px;   
 }
+
+.section-container {
+    text-align: justify;
+}
+
+.section-container::after {
+    content: "";
+    width: 100%;
+    display: inline-block;
+    height: 0
+} 
+
+.article {
+    display: inline-block;
+    border-color: black;
+    border-style: dashed;
+    width: 43.58%;
+    padding-top: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 3%;
+    height: 200px;
+    vertical-align: top;
+   
+}
+
+.article1 {
+
+    border-color: black;
+    border-style: dashed;
+    padding-top: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 3%
+}
+
+button {
+    border: none;
+    width: 130px;
+    height: 50px;
+    color:blue;
+    background-color: bisque;
+    border-radius: 10px;
+}
+
+a:link,
+a:visited {
+    color: blue;
+    text-decoration: none;
+
+}
+
+h2 {
+    color: blue;
+    font-weight: bolder;
+}
+
+
+
