Completing the first article
Completing the section of the first article

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -19,8 +19,20 @@ h1{
 }
 #article-one-title{
   display: flex;
+  margin-top: 20px;
   border: 1.0px solid white;
   border-radius: 15px;
+}
+
+.btn-format{
+  height: 40px;
+  width: 100px;
+  font-size: 18px;
+  padding: 2px;
+  border: 0px solid #222222;
+  border-radius: 8px;
+  background: lightgray;
+  color: black;
 }
 
 #bg-image {
