--- a/Wireframe/css/styles.css
+++ b/Wireframe/css/styles.css
@@ -5,7 +5,6 @@ body {
     background-color: beige;
     margin-left: 115px;
     margin-right: 150px;
-    margin-top: 20px;
     margin-bottom: 40px;
 }
 
@@ -16,7 +15,7 @@ body {
     padding-left: 3%;
     padding-right: 3%;
     padding-bottom: 3%;
-    height: 200px;   
+    height: 150px;   
 }
 
 .section-container {
@@ -74,6 +73,8 @@ h2 {
 .footer {
     color:blue;
     text-align: center;
+    background-color: aquamarine;
+    padding: 20px;
 }
 
 
