--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -17,8 +17,19 @@ h1{
   margin-left: 80px;
 
 }
+#article-three-h2-margin{
+  margin-right: 100px;
+
+}
 #article-one-title{
   display: flex;
+  margin-top: 20px;
+  border: 1.0px solid white;
+  border-radius: 15px;
+}
+#other-article-title{
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
   border: 1.0px solid white;
   border-radius: 15px;
@@ -35,12 +46,9 @@ h1{
   color: black;
 }
 
-#bg-image {
-  
-  background-size: cover;
-  padding: 0;
-  margin:0;
-  height: 350px;
+#git-logo{
+  width: 200px;
+  height: 100px;
 }
 p{
   padding-top: 5px;
