--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -7,3 +7,11 @@ body {
     flex-direction: column;
     color:rgb(80, 28, 109);
 }
+header{
+    background-color:#ffcc00;;
+    color:black;
+    padding:20;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
+}
