--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,132 +1,191 @@
 @font-face {
-    font-family: "Lato";
-    font-style: normal;
-    font-weight: 400;
-    src: local("Lato Regular"), local("Lato-Regular"),
-      url("../fonts/lato-v15-latin-regular.woff2") format("woff2"),
-      /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../fonts/lato-v15-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* lato-700 - latin */
-  @font-face {
-    font-family: "Lato";
-    font-style: normal;
-    font-weight: 700;
-    src: local("Lato Bold"), local("Lato-Bold"),
-      url("../fonts/lato-v15-latin-700.woff2") format("woff2"),
-      /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../fonts/lato-v15-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* lato-900 - latin */
-  @font-face {
-    font-family: "Lato";
-    font-style: normal;
-    font-weight: 900;
-    src: local("Lato Black"), local("Lato-Black"),
-      url("../fonts/lato-v15-latin-900.woff2") format("woff2"),
-      /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url("../fonts/lato-v15-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  html {
-    height: 100%;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-  }
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    height: 100%;
-    font-family: lato;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: normal;
-    color: black;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Lato Regular"), local("Lato-Regular"),
+    url("../fonts/lato-v15-latin-regular.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/lato-v15-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* lato-700 - latin */
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Lato Bold"), local("Lato-Bold"),
+    url("../fonts/lato-v15-latin-700.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/lato-v15-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* lato-900 - latin */
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 900;
+  src: local("Lato Black"), local("Lato-Black"),
+    url("../fonts/lato-v15-latin-900.woff2") format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/lato-v15-latin-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 
-  .wrapper_title {
-    text-align: center;
-  }
+html,
+body {
+  height: 100%;
+}
 
-  .wrapper-article {
-    max-width: 1060px;
-    margin: 0 auto;
-    display: flex;
-    
-    flex-direction: column;
-  }
+html {
+  height: 100%;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
-  .main_article {
-    
-    padding: 20px;
-    /* width: 900px;
-    height: 400px; */
-  }
+body {
+  height: 100%;
+  font-family: lato;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: black;
+}
 
-  img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    margin-bottom: 15px;
-  }
+img {
+  max-width: 100%;
+  height: auto;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
 
-  .articles {
-    margin: 20px 0;
-    display: flex;
-    justify-content: space-around;
-  }
+.page {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
-  .article {
-    padding: 20px;
-  }
+.main {
+  flex: 1 0 auto;
+}
 
-  .article_btn {
-   
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 26px; 
-  
-    margin-right: 38px;
-  
-    width: 161px;
-    height: 50px;
-  
-    color: #e06733;
-  
-    box-sizing: border-box;
-  
-    border: 1px solid #e06733;
-    border-radius: 5px;
-  
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: #edf2ec;
-    transition: all 0.3s ease-in;
-  }
+.header {
+  margin: 0 auto;
+}
 
-  .article_btn:hover {
-    background-color: #4caf50;
-    color: white;
-  }
+.title {
+  text-align: center;
+}
 
-  .page {
-    overflow: hidden;
-  }
+.wrapper-article {
+  max-width: 1060px;
+  margin: 0 auto;
+  display: flex;
 
-  .footer {
-   
-    width: 100%;
-    height: 100px;
-    background-color: black;
+  flex-direction: column;
+}
+
+
+img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  margin-bottom: 15px;
+}
+
+.articles {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.article {
+  padding: 20px;
+}
+
+.articles:first-child {
+  background-color: aqua;
+}
+
+.article_btn {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+
+  margin-right: 38px;
+
+  width: 161px;
+  height: 50px;
+
+  color: #e06733;
+
+  box-sizing: border-box;
+
+  border: 1px solid #e06733;
+  border-radius: 5px;
+
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: #010600;
+  transition: all 0.3s ease-in;
+}
+
+.article_btn:hover {
+  background-color: #4caf50;
+  color: white;
+}
+
+.main_article {
+  display: block;
+  padding: 20px;
+}
+
+.page {
+  overflow: hidden;
+}
+
+.footer {
+  flex: 0 0 auto;
+  width: 100%;
+  height: 100px;
+  background-color: black;
+}
+
+.footer-git {
+  padding-top: 30px;
+  text-align: center;
+}
+
+.footer-link {
+  font-size: 30px;
+  text-align: center;
+  color: white;
+}
+
+.footer-git:hover {
+  animation: pulse 1s infinite;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
   }
+  70% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.color-text {
+  color: #499a18;
+}
