--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -26,3 +26,20 @@ main{
     flex: 1;
     padding: 20px;
 }
+.articles{
+    margin-top: 20px;
+    display:flex;
+    gap: 20px;
+}
+article {
+    border-radius: 10px; 
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); 
+    padding: 20px;
+}
+article h2{
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px; 
+}
