--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -70,7 +70,7 @@ a:hover {
     text-decoration: underline;
 }
 footer {
-    background-color: #333; /* Dark background */
+    background-color: #333;
     color: white;
     text-align: center;
     padding: 10px 0;
