Style label, input fields, and add flex layout for privacy policy checkbox in newsletter form

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -144,3 +144,24 @@ footer {
   display: flex;
   gap: 1rem;
 }
+
+label {
+  font-size: 2rem;
+}
+
+label span {
+  color: #576574a1;
+}
+
+input {
+  border: 1px solid #57657430;
+  padding: 1rem 2rem;
+  color: #576574;
+  font-size: 1.5rem;
+  border-radius: 5px;
+}
+
+.flex {
+  display: flex;
+  gap: 1rem;
+}
