Use :first-child pseudo-class to make the first article stand out with a distinct background color

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -77,6 +77,10 @@ button {
   cursor: pointer;
 }
 
+.main-article article:first-of-type {
+  background-color: #fec95726;
+}
+
 main {
   padding: 0 2rem;
   margin-bottom: 32rem;
