Update styling for first article in .main-article with background color #57657414 and 2px dashed border for visual distinction.

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -80,7 +80,8 @@ button {
 }
 
 .main-article article:first-of-type {
-  background-color: #fec95726;
+  background-color: #57657414;
+  border: 2px dashed #576574;
 }
 
 main {
