--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,6 +1,12 @@
 * {
-    margin: 0;
+    margin: 10px;
     padding:0;
+    font-family: fantasy;
+    background-color: rgb(46, 48, 49);
+    color: aliceblue;
+    letter-spacing: 1px;
+   
+
 }
 
 .header{
@@ -13,6 +19,7 @@
 
 h2{
     margin-bottom: 20px;
+    color: orange;
 }
 
 .intro{ 
@@ -21,4 +28,21 @@ h2{
     margin: 10px;
     padding: 10px;
     max-width: auto;
+}
+
+.img-branch{
+    display: block;
+    margin: 20px auto;
+    /* margin-right: auto; */
+    width: 100%;
+}
+
+.container{
+    display: flex;
+    flex-direction:row;
+    gap: 20px;
+}
+.section-2{
+    max-width: 50%;
+    height: auto;
 }
