--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -5,8 +5,6 @@
     background-color: rgb(46, 48, 49);
     color: aliceblue;
     letter-spacing: 1px;
-   
-
 }
 
 .header{
@@ -33,8 +31,13 @@ h2{
 .img-branch{
     display: block;
     margin: 20px auto;
-    /* margin-right: auto; */
     width: 100%;
+}
+
+.logo{
+    display: block;
+    margin: 20px auto;
+    width: 50%;
 }
 
 .container{
@@ -42,7 +45,21 @@ h2{
     flex-direction:row;
     gap: 20px;
 }
+
 .section-2{
     max-width: 50%;
     height: auto;
 }
+
+a{
+ color: orange;
+}
+
+ul li {
+    color: rgb(217, 217, 233);
+  }
+  
+  ul li:first-child {
+    color: orange;
+    font-weight: bold;
+  }
