--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -6,6 +6,7 @@ body {
   margin-right: 100px;
   background: #f0efe7;
   padding: 0;
+  
 }
 
 h1{
@@ -13,14 +14,15 @@ h1{
   margin-bottom: 5px;
  
 }
+h2{
+  margin:5px;
+ 
+}
 #article-one-h2-margin{
   margin-left: 80px;
 
 }
-#article-three-h2-margin{
-  margin-right: 100px;
 
-}
 #article-one-title{
   display: flex;
   margin-top: 20px;
@@ -29,12 +31,16 @@ h1{
 }
 #other-article-title{
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  width: 991px;
+  margin:5px;
   border: 1.0px solid white;
   border-radius: 15px;
 }
+.article-two-three-width{
+  width: 500px;
+  margin: 0;
 
+}
 .btn-format{
   height: 40px;
   width: 100px;
@@ -51,7 +57,7 @@ h1{
   height: 100px;
 }
 p{
-  padding-top: 5px;
   margin: 5px;
+  padding-top: 5px;
   line-height: 25px;
 }
