--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -53,7 +53,10 @@ h2{
   background: lightslategray;
   color: black;
 }
-.btn-format:hover {background-color: rgb(202, 142, 64)}
+.btn-format:hover {
+  background-color: rgb(202, 142, 64);
+  color:white;
+}
 
 #git-logo{
   width: 200px;
