--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -14,6 +14,12 @@ article{
     background-color: rgb(224, 193, 183);
     border: 1px solid rgb(104, 95, 95);
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+article img{
+    width: 60%;
 }
 section{
     display: flex;
