--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,20 +1,21 @@
 #git{
     
-    align-content: center;
     text-align: center;
-    align-items: center;
     display: block;
     width: auto;
     height: auto;
     margin-top: 30px;
     margin-bottom: 30px;
-
+    
+    
+    
 }
+
 section:first-child{
-    border:5px solid blue;
-}
+    border:2px solid blue;
+    }
 
- #header{
+ #hero{
     text-align: center;
  }
 .article2{
@@ -30,11 +31,14 @@ section:first-child{
     justify-content: space-around; 
     
 } 
-button{
-    width: 10px;
-    height:5px;
 
-}
 a{
     text-decoration: none;
+}
+#contact{
+    width:50px;
+    height:50px;
+}
+footer{
+    text-align: center;
 }
