--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -17,28 +17,45 @@ section:first-child{
 
  #hero{
     text-align: center;
+    line-height: 20px;
+    margin-bottom: 30px;
  }
 .article2{
     margin-top: 30px;
-    border-radius: 10%;
     width:400px;
     height:400px;
-    color:black;
-    
 }
+
 #change-developer{
     display:flex;
     justify-content: space-around; 
     
 } 
+button{
+    padding: 10px;
+    text-align: center;
+    align-items: center;
+}
 
 a{
     text-decoration: none;
 }
+
 #contact{
-    width:50px;
-    height:50px;
+    width:40px;
+    height:40px;
 }
 footer{
     text-align: center;
+    margin-top:;
+    line-height: 10px;
+    
+}
+#last{
+    display: flex;
+    justify-content: center;
+
+}
+h2{
+    font-size: 20px;
 }
