--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -5,10 +5,7 @@
     width: auto;
     height: auto;
     margin-top: 30px;
-    margin-bottom: 30px;
-    
-    
-    
+    margin-bottom: 30px;    
 }
 
 section:first-child{
@@ -47,7 +44,7 @@ a{
 }
 footer{
     text-align: center;
-    margin-top:;
+    margin-top:130px;
     line-height: 10px;
     
 }
