--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,9 +1,22 @@
 body {
-    background-color: aquamarine;
+    background-image: linear-gradient(pink,rgb(145, 145, 218));
     color: brown;
     text-align: center;
     margin: auto;
 }
+
+h1{
+    font-size: 80px;
+}
+
+header p {
+    font-size: 30px;
+}
+h1, h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+
 #flex-container {
     display: flex;
     flex-direction: column;
@@ -16,4 +29,5 @@ body {
     padding: 40px;
     margin: 20px;
     width: 600px;
+    border-radius: 10px;
 }
