--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(pink,rgb(145, 145, 218));
+    
     color: brown;
     text-align: center;
     margin: auto;
@@ -22,12 +22,18 @@ h1, h2 {
     flex-direction: column;
     align-items: center;
     margin: 60px;
+    background-image: linear-gradient(pink,rgb(145, 145, 218));
 
 }
 .article-1, .article-2, .article-3 {
     background-color: bisque;
     padding: 40px;
     margin: 20px;
-    width: 600px;
+    width: 800px;
     border-radius: 10px;
+    font-size: 20px;
+    box-shadow: 10px;
+}
+footer{
+    font-size: 20px;
 }
