--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,5 +1,23 @@
-body {
-    background-color: bisque;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: rgb(117, 102, 24);
+}
+
+
+.main {
+    background-color: white;
+    width: 1000px;
+    height: 600px;
+    border: 1px solid rgba(233, 239, 233,.5);
+    border-radius: 20px;
+    margin: auto;
+    
+
 }
 
 
