--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -7,7 +7,15 @@
 body{
     background-color: rgb(117, 102, 24);
 }
-
+header {
+    background-color: rgba(0, 0, 0,.5);
+    padding: 50px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: white;
+    font-size: xx-large;
+    
+}
 
 .main {
     background-color: white;
@@ -18,6 +26,10 @@ body{
     margin: auto;
     
 
+}
+
+.hero{
+text-align: center;
 }
 
 
