--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -56,6 +56,11 @@ Medium: 16px
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5); 
+}
+
 html {
   font-size: 62.5%;
 }
@@ -96,6 +101,7 @@ body {
 
 .grid {
   display: grid;
+  gap: 4.8rem;
 }
 
 .grid--article {
@@ -137,12 +143,13 @@ body {
 .article {
   padding: 6.4rem 4.8rem;
   border-radius: 16px;
+  box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.1);
 }
 
 article:first-child {
   width: 75%;
   margin: 0 auto;
-  box-shadow: 0 0 2.4rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 2.4rem rgba(30, 41, 59, 0.3);
 }
 
 .article-what-git {
@@ -196,10 +203,14 @@ article:first-child {
   background-color: #151d29;
 }
 
+.article-link:active {
+  transform:translate(0, 3px);
+}
+
 /* FOOTER */
 
 .footer {
-  padding: 2.4rem;
+  padding: 1.2rem;
   background-color: #353e4f;
   position: fixed;
   left: 0;
@@ -208,7 +219,7 @@ article:first-child {
 }
 
 .footer-text {
-  font-size: 2rem;
+  font-size: 1.6rem;
   line-height: 1.5;
   color: #e9eaeb;
 }
